[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/orb_red.png" type="Texture" id=1]
[ext_resource path="res://SingleComponent.gd" type="Script" id=2]
[ext_resource path="res://assets/orb_white.png" type="Texture" id=3]
[ext_resource path="res://ComponentUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/orb_red_n.png" type="Texture" id=5]

[node name="XComponent" type="Position2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.619608 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
normal_map = ExtResource( 5 )

[node name="p1" type="Sprite" parent="."]
position = Vector2( 80, 0 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 3 )

[node name="Control" parent="." instance=ExtResource( 4 )]
position = Vector2( -59.2449, -36.5269 )
[connection signal="pressed" from="Control/ComponentUI/HBoxContainer/btn_speed_min" to="." method="_on_btn_speed_min_pressed"]
[connection signal="pressed" from="Control/ComponentUI/HBoxContainer/btn_speed_plus" to="." method="_on_btn_speed_plus_pressed"]
[connection signal="pressed" from="Control/ComponentUI/HBoxContainer2/btn_offset_min" to="." method="_on_btn_offset_min_pressed"]
[connection signal="pressed" from="Control/ComponentUI/HBoxContainer2/btn_offset_plus" to="." method="_on_btn_offset_plus_pressed"]

[editable path="Control"]
